# walkietalk

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.bench.yml  docker-compose.yml
.github/workflows/: ci.yml
client/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  router.ts
client/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev2.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: http_client.rs  lib.rs  main.rs  state.rs
client/src-tauri/src/audio/: capture.rs  engine.rs  mod.rs  playback.rs
client/src-tauri/src/commands/: audio.rs  auth.rs  connection.rs  floor.rs  misc.rs  mod.rs  realtime.rs  rooms.rs  settings.rs
client/src-tauri/src/transport/: manager.rs  mod.rs  ws.rs
client/src/components/: Avatar.tsx  Badge.tsx  BottomSheet.tsx  Button.tsx  ConnectionBar.tsx  Countdown.tsx  EmptyState.tsx  FloorBanner.tsx  Input.tsx  MemberList.tsx  MemberRow.tsx  Modal.tsx  PresenceDot.tsx  PttButton.tsx  Toast.tsx  Toggle.tsx  VuMeter.tsx
client/src/hooks/: useTauriEvent.ts
client/src/screens/: CreateRoom.tsx  JoinByCode.tsx  Login.tsx  Profile.tsx  PublicRooms.tsx  Register.tsx  RoomList.tsx  RoomSettings.tsx  RoomView.tsx  Splash.tsx
client/src/stores/: activeRoom.ts  audio.ts  auth.ts  connection.ts  rooms.ts  settings.ts
client/src/styles/: global.css  reset.css  tokens.css
client/src/utils/: format.ts  haptics.ts  sounds.ts
crates/auth-service/: Cargo.toml
crates/auth-service/src/: config.rs  lib.rs  main.rs  models.rs  state.rs
crates/auth-service/src/routes/: auth.rs  health.rs  mod.rs  users.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: auth_tests.rs  cross_service_tests.rs  signaling_tests.rs
crates/integration-tests/tests/common/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: audio.rs  auth.rs  db.rs  enums.rs  error.rs  extractors.rs  ids.rs  lib.rs  messages.rs
crates/signaling-service/: Cargo.toml
crates/signaling-service/src/: config.rs  floor.rs  hub.rs  lib.rs  main.rs  metrics.rs  presence.rs  state.rs  utils.rs  zmq_relay.rs
crates/signaling-service/src/models/: room.rs
crates/signaling-service/src/routes/: mod.rs  rooms.rs
crates/signaling-service/src/ws/: connection.rs  handler.rs
crates/signaling-service/tests/: integration_test.rs
crates/zmq-proxy/: Cargo.toml
crates/zmq-proxy/src/: lib.rs  main.rs
crates/zmq-proxy/tests/: proxy_test.rs
migrations/: 001_initial_schema.sql
scripts/: bench-charts.py  bench-collect.sh  test-multinode.sh
