[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/auth-service",
    "crates/signaling-service",
]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
validator = { version = "0.18", features = ["derive"] }

# Async
async-trait = "0.1"

# Concurrency
dashmap = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Config
dotenvy = "0.15"
