[package]
name = "walkietalk-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
walkietalk-shared = { path = "../shared", features = ["axum"] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
validator = { workspace = true }
