[package]
name = "walkietalk-signaling"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
metrics = []

[dependencies]
walkietalk-shared = { path = "../shared", features = ["axum"] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
validator = { workspace = true }
rand = { workspace = true }
zeromq = "0.5.0"
bytes = "1"

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.27.1"
redis = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
